--- a/CSS/Common.css
+++ b/CSS/Common.css
@@ -137,7 +137,7 @@ footer {
 }
 
 .btn-primary:hover:not(:disabled) {
-    background-color: #3f5f56;
+    background-color: #2e2e2e;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
@@ -153,7 +153,7 @@ footer {
 }
 
 .btn-secondary:hover {
-    background-color: #6d9175;
+    background-color: #e2e2e2;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1);
 }
 
